--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@financial-times/tc-ui": "file:packages/tc-ui",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "graphql-playground-middleware-express": "^1.7.12",
+    "graphql-playground-middleware-express": "^1.7.14",
     "http-errors": "^1.7.3",
     "module-alias": "^2.2.2",
     "neo4j-driver": "^1.7.6",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "snyk": "^1.316.1"
+    "snyk": "^1.341.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -56,7 +56,7 @@
     "webpack-manifest-plugin": "^2.2.0"
   },
   "scripts": {
-    "test": "make test",
+    "test": "snyk test && make test",
     "postinstall": "athloi exec npm i -- --no-package-lock",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
